--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  
+<meta name="google-site-verification" content="vUECXt5poge5aDyA-2l7qz0LR8R9buEecqm4Llr9QLY" />  
+<meta name="naver-site-verification" content="197dc22c586944ab5eb27f5e4b76356f89c9eda7" />  
   
   <title>업계 비밀 전격 공개 실비보험 어디가 좋은지 고민된다면 이 링크가 정답</title>
 
@@ -458,3 +458,4 @@
 
 </body>
 </html>
+
